# guglielmo

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  about.ui  appimage.sh  guglielmo.desktop  guglielmo.plist  guglielmo.pro  guglielmo.qrc  guglielmo.ui  macinstaller.sh  settings.ui  wininstaller.sh
cmake/Modules/: FindFFTW3f.cmake  FindFaad.cmake  FindFdk-AAC.cmake  FindLibAIRSPY.cmake  FindLibRTLSDR.cmake  FindLibSampleRate.cmake  FindLibSndFile.cmake  FindPortaudio.cmake  FindQwt.cmake  Findzlib.cmake
devices/: device-handler.cpp  device-handler.h
devices/airspy-handler/: airspy-handler.cpp  airspy-handler.cpp.new  airspy-handler.h  airspy-handler.h.new  airspyfilter.cpp  airspyfilter.h
devices/hackrf-handler/: hackrf-handler.cpp  hackrf-handler.h
devices/lime-handler/: lime-handler.cpp  lime-handler.h
devices/pluto-handler/: pluto-handler.cpp  pluto-handler.h
devices/rtlsdr-handler/: rtlsdr-handler.cpp  rtlsdr-handler.h
devices/sdrplay-handler/: .sdrplay-handler.cpp.swp  sdrplay-handler.cpp  sdrplay-handler.h
devices/sdrplay-handler-v3/: sdrplay-commands.h  sdrplay-handler-v3.cpp  sdrplay-handler-v3.h
etc/: guglielmo.desktop
etc/appimage/: AppRun
include/: .constants.h.swp  combobox.h  constants.h  knob.h  listwidget.h  logger.h  logging.h  radio.h  settings.h
include/backend/: backend-deconvolver.h  backend-driver.h  backend.h  charsets.h  converter-2.h  firecode-checker.h  frame-processor.h  galois.h  mm_malloc.h  msc-handler.h  reed-solomon.h  services.h
include/backend/audio/: bitWriter.h  faad-decoder.h  fdk-aac.h  mp2processor.h  mp4processor.h
include/backend/data/: data-processor.h  ip-datahandler.h  journaline-datahandler.h  pad-handler.h  tdc-datahandler.h  virtual-datahandler.h
include/backend/data/epg/: epgdec.h
include/backend/data/epg-2/: epg-decoder.h
include/backend/data/mot/: mot-dir.h  mot-handler.h  mot-object.h
include/dab/: dab-processor.h  dab-tables.h
include/fm/: fm-demodulator.h  fm-processor.h
include/ofdm/: dab-config.h  fib-decoder.h  fib-table.h  fic-handler.h  freq-interleaver.h  ofdm-decoder.h  phasereference.h  phasetable.h  sample-reader.h  tii_detector.h  timesyncer.h
include/output/: Qt-audio.h  Qt-audiodevice.h  audio-base.h  audiosink.h  newconverter.h
include/protection/: eep-protection.h  protTables.h  protection.h  uep-protection.h
include/rds/: codetables.h  ebu-codetables.h  rds-blocksynchronizer.h  rds-decoder.h  rds-group.h  rds-groupdecoder.h
include/share/: getopt.h
include/support/: Xtan2.h  band-handler.h  bits-helper.h  dab-params.h  dab-tables.h  dir-cache.h  ensemble-printer.h  fft-filters.h  fft-handler.h  fft.h  fir-filters.h  hea  iir-filters.h  math-helper.h  oscillator.h  pll.h  pllC.h  process-params.h  ringbuffer.h  sincos.h  squelchClass.h  text-mapper.h  trigtabs.h
include/support/viterbi-spiral/: viterbi-spiral.h
installer/macx/: guglielmo-installer.icns
installer/macx/config/: config.xml
installer/windows/config/: appearence.qs  config.xml
installer/windows/packages-extra/com.sdrplay.api/meta/: installscript.qs  package.xml
installer/windows/packages-extra/ie.akeo.zadig/meta/: installscript.qs  package.xml
skins/silver/: silver.qss
skins/silver-simple/: silver-simple.qss
src/: dialogs.cpp  main.cpp  radio.cpp
src/backend/: backend-deconvolver.cpp  backend-driver.cpp  backend.cpp  charsets.cpp  galois.cpp  msc-handler.cpp  reed-solomon.cpp
src/backend/audio/: bitWriter.cpp  faad-decoder.cpp  fdk-aac.cpp  mp2processor.cpp  mp4processor.cpp
src/backend/data/: data-processor.cpp  ip-datahandler.cpp  journaline-datahandler.cpp  pad-handler.cpp  tdc-datahandler.cpp
src/backend/data/epg/: epgdec.cpp
src/backend/data/epg-2/: epg-decoder.cpp
src/backend/data/mot/: mot-dir.cpp  mot-handler.cpp  mot-object.cpp
src/dab/: dab-processor.cpp  dab-tables.cpp
src/fm/: fm-demodulator.cpp  fm-processor.cpp
src/ofdm/: fib-decoder.cpp  fic-handler.cpp  freq-interleaver.cpp  ofdm-decoder.cpp  phasereference.cpp  phasetable.cpp  sample-reader.cpp  tii_detector.cpp  timesyncer.cpp
src/output/: .audiosink.cpp.swp  Qt-audio.cpp  Qt-audiodevice.cpp  audio-base.cpp  audiosink.cpp  newconverter.cpp
src/protection/: eep-protection.cpp  protTables.cpp  protection.cpp  uep-protection.cpp
src/rds/: rds-blocksynchronizer.cpp  rds-decoder.cpp  rds-group.cpp  rds-groupdecoder.cpp
src/share/: getopt.c
src/support/: band-handler.cpp  dab-params.cpp  dir-cache.cpp  fft-filters.cpp  fft-handler.cpp  fft.cpp  fir-filters.cpp  hea  iir-filters.cpp  oscillator.cpp  pll.cpp  pllC.cpp  sincos.cpp  trigtabs.cpp
src/support/viterbi-spiral/: spiral-neon.c  spiral-no-sse.c  spiral-sse.c  viterbi-spiral.cpp
